--- a/source/popup.css
+++ b/source/popup.css
@@ -1,7 +1,4 @@
 html {
-  background-image: url('images/logo-256.png');
-  background-position: center;
-  background-repeat: no-repeat;
   margin: 0;
   padding: 0;
   width: max-content;
